<resources>
    <string name="app_name">Notes App</string>
    <string name="floatingactionbutton">floatingactionbutton</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="no_data">No Data</string>
    <string name="delete_all_notes">Delete all Notes</string>
</resources>